Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-80051

qdoc: 'depends = *' does not work

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • 5.14.0 RC1
    • 5.14
    • Build tools: qdoc
    • None
    • 2b6c90317b6bc5f94ca0dc14a3a1467aa8019b17 (qt/qttools/5.14)
    • QDoc Sprint 3

    Description

      QDoc recognized '*' as a valid value for depends variable, and it's supposed to load all available index files.

      However, this does not work.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            treinio Topi Reiniƶ
            treinio Topi Reiniƶ
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes